# ros2_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ed6_description/share/ed6_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ed6_description/share/ed6_description/config/: controllers.yaml
install/ed6_description/share/ed6_description/launch/: display.launch  display.launch.py
install/ed6_description/share/ed6_description/meshes/backup/: J1.STL  J5.STL  J6.STL
install/ed6_description/share/ed6_description/urdf/: ed6_robot.gazebo.xacro  ed6_robot.urdf.xacro
install/ur_simulation_gazebo/share/ament_index/resource_index/package_run_dependencies/: ur_simulation_gazebo
install/ur_simulation_gazebo/share/ament_index/resource_index/parent_prefix_path/: ur_simulation_gazebo
install/ur_simulation_gazebo/share/ur_simulation_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_simulation_gazebo/share/ur_simulation_gazebo/cmake/: ur_simulation_gazeboConfig-version.cmake  ur_simulation_gazeboConfig.cmake
install/ur_simulation_gazebo/share/ur_simulation_gazebo/config/: ur_controllers.yaml
install/ur_simulation_gazebo/share/ur_simulation_gazebo/environment/: ament_prefix_path.dsv  path.dsv
install/ur_simulation_gazebo/share/ur_simulation_gazebo/launch/: ur_sim_control.launch.py  ur_sim_moveit.launch.py
log/: latest_build
src/ed6_description/: CMakeLists.txt  package.xml
src/ed6_description/config/: display.rviz
src/ed6_description/launch/: gazebo.launch  gazebo.launch.py
src/ed6_description/meshes/: convert.sh
src/ed6_description/meshes/backup/: J0.STL  J2.STL  J3.STL  J4.STL
src/ed6_description/urdf/: ED6-URDF-0102.SLDASM.csv  ED6-URDF-0102.SLDASM.urdf  ed6_robot.rviz.xacro
